# ttest

./: .gitignore  Makefile  Readme.md  pyproject.toml  pytest.ini  setup.sh
configs/: defaults.yaml
configs/compute/: crescent_v100.yaml  local_dev.yaml
configs/data/: mathematics.yaml  the-stack.yaml  wikitext-103.yaml  wikitext-2.yaml
configs/eval/: crumpled_paper.yaml  efficiency.yaml  fidelity.yaml
configs/experiment/: e1a_wiki103.yaml  e2a_pruning.yaml  e2b_channel.yaml
configs/model/: bert-base-cased.yaml  distilroberta.yaml  gpt2-large.yaml  gpt2-medium.yaml  gpt2.yaml  roberta-base.yaml
data/: factual_probes.jsonl  ood_qa.jsonl  ood_texts.txt
lldc/: __init__.py
lldc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
lldc/analysis/: channel.py
lldc/baselines/: kenlm_subsample.py
lldc/compression/: compressor_vq.py  masking_policies.py  predictive_masking.py  reconstruction.py  token_alignment.py
lldc/data/: bootstrap.py  ood.py  ood_sources.py  probes.py
lldc/decompression/: vq_decompress.py
lldc/eval/: factual_recall.py  functional.py  hallucination.py  perplexity.py
lldc/metrics/: crumpled_paper.py  entropy_mi.py  fidelity.py  latency_rate.py  pm_bpt.py
lldc/models/: loaders.py  specialization.py
lldc/oracles/: autoregressive.py  measuring_tokenizer.py
lldc/post/: amortized_bpc.py
lldc/scripts/: 1stage2_compress_pm.py  1stage2_compress_vq.py  2stage1_specialise.py  analyze_pruning_correlation.py  channel_analysis.py  compute_baselines.py  compute_dataset_stats.py  evaluate_all.py  evaluate_reconstructions.py  sweeps.py  (+12 more)
tests/: Readme.md  conftest.py
(+113 files in other folders)
